<resources>
    <string name="app_name">MedicareOrtho</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="rupee">\u20B9</string>
    <string name="internetmsg">Please check your internet connection.</string>
    <string name="action_settings">Settings</string>
    <string name="str_something_went_worng">Server is not responding. Please try again after sometime.</string>
    <string name="lbl_message">Message</string>
    <string name="btn_str_ok">Ok</string>
    <string name="loading">Loading...</string>
    <string name="read_image_fail">Failed to read image</string>
    <string name="image_not_loaded">Image is not Loaded</string>
    <string name="exit_alert_string">Do you want to exit?</string>
    <string name="set_yes">Yes</string>
    <string name="set_no">No</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_about_us">About Us</string>
    <string name="str_hint_name">Name</string>
    <string name="str_hint_addr">Address</string>
    <string name="str_hint_city">City</string>
    <string name="str_hint_pin">Pin Code</string>
    <string name="str_hint_state">State</string>
    <string name="str_hint_country">Country</string>
    <string name="str_hint_mail">E-mail</string>
    <string name="str_hint_phone">Phone Number</string>
    <string name="str_hint_remark">Remark</string>
    <string name="str_inquiry">Inquiry</string>
    <string name="str_submit">Submit</string>
    <string name="app_key_ws">da85d87b84495e41e24a55ea05bc7247</string>
    <string name="office_address">Office Address:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="mobile_number">Mobile Number:</string>
    <string name="email_id">Email Id:</string>
    <string name="website">Website:</string>
    <string name="str_contact_us">Contact</string>
    <string name="no_categories_found">No categories found</string>
    <string name="no_products_found">No Products Found</string>
    <string name="sr_no">Sr. No.</string>
    <string name="size">Size</string>
    <string name="name">Name</string>
    <string name="str_products">Products</string>
    <string name="str_product_details">Product Details</string>
    <string name="price">Price</string>
    <string name="str_quailty">Quality</string>

</resources>
