<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    tools:context="com.ortho.medicare.medicareortho.fragments.InquiryFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimen_10">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/frg_inquiry_edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/str_hint_name"
                    android:padding="@dimen/dimen_05" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/frg_inquiry_edt_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/str_hint_addr"
                    android:padding="@dimen/dimen_05" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/frg_inquiry_edt_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/str_hint_city"
                    android:padding="@dimen/dimen_05" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/frg_inquiry_edt_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/str_hint_pin"
                    android:padding="@dimen/dimen_05" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/frg_inquiry_edt_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/str_hint_state"
                    android:padding="@dimen/dimen_05" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/frg_inquiry_edt_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/str_hint_country"
                    android:padding="@dimen/dimen_05" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/frg_inquiry_edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/str_hint_mail"
                    android:padding="@dimen/dimen_05" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/frg_inquiry_edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/str_hint_phone"
                    android:padding="@dimen/dimen_05" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/frg_inquiry_edt_remark"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/str_hint_remark"
                    android:padding="@dimen/dimen_05" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/frg_inquiry_btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dimen_10"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@drawable/rounded_btn_bg"
                android:gravity="center"
                android:padding="@dimen/dimen_05"
                android:text="@string/str_submit"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
