<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_product"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dimen_10"
    android:layout_marginRight="@dimen/dimen_10"
    android:layout_marginTop="@dimen/dimen_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_10">

        <ImageView
            android:id="@+id/item_product_iv_image"
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:orientation="horizontal">

            <com.ortho.medicare.medicareortho.customviews.CustomTextView
                android:id="@+id/item_product_tv_srno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sr_no"
                app:font_type="semi_bold" />

            <com.ortho.medicare.medicareortho.customviews.CustomTextView
                android:id="@+id/item_product_tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                app:font_type="semi_bold" />

            <com.ortho.medicare.medicareortho.customviews.CustomTextView
                android:id="@+id/item_product_tv_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/size"
                app:font_type="semi_bold" />

            <com.ortho.medicare.medicareortho.customviews.CustomTextView
                android:id="@+id/item_product_tv_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price"
                app:font_type="semi_bold" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/item_product_items_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</android.support.v7.widget.CardView>
