<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    tools:context="com.ortho.medicare.medicareortho.fragments.ContactFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimen_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.ortho.medicare.medicareortho.customviews.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:text="@string/office_address"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_color_red" />

                <com.ortho.medicare.medicareortho.customviews.CustomTextView
                    android:id="@+id/frg_contact_txt_address"
                    style="@style/TextViewContact" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:orientation="horizontal">

                <com.ortho.medicare.medicareortho.customviews.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:text="@string/phone_number"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_color_red" />

                <com.ortho.medicare.medicareortho.customviews.CustomTextView
                    android:id="@+id/frg_contact_txt_phone"
                    style="@style/TextViewContact" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:orientation="horizontal">

                <com.ortho.medicare.medicareortho.customviews.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:text="@string/mobile_number"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_color_red" />

                <com.ortho.medicare.medicareortho.customviews.CustomTextView
                    android:id="@+id/frg_contact_txt_mobile"
                    style="@style/TextViewContact" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:orientation="horizontal">

                <com.ortho.medicare.medicareortho.customviews.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:text="@string/email_id"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_color_red" />

                <com.ortho.medicare.medicareortho.customviews.CustomTextView
                    android:id="@+id/frg_contact_txt_email"
                    style="@style/TextViewContact" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:orientation="horizontal">

                <com.ortho.medicare.medicareortho.customviews.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:text="@string/website"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_color_red" />

                <com.ortho.medicare.medicareortho.customviews.CustomTextView
                    android:id="@+id/frg_contact_txt_website"
                    style="@style/TextViewContact" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
